--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -1,3 +1,7 @@
+// Boostrap Sass overiden var (needs to be declared before importing bootstrap...)
+$alert-danger-text: #f44242;
+
+
 // import the CSS framework
 @import "bootstrap-sprockets";
 @import "bootstrap";
